--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script: bundle exec middleman build
 before_deploy: cd build
 deploy:
   provider: s3
-  bucket: "test.closure.jp"
+  bucket: "closure-jp"
   skip_cleanup: true
   secret_access_key:
     secure: o3woNyvTnKWSLUYoHRN3APKEgpDPTrFqZoAcHQAbLPgNowIXEQ0xM2YjXJjzQZgFqwuXe0YT9jeB1qKl5kpr7YEvADpZ2/Nz+aYlzaIJjnf6MCJS5p1+rXmjpr1sQy9XTXLCkn96/Yz23UJDlonwqzQAGzJiALaIlSSHkVmFbaE=
