--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,8 @@ before_script:
 - npm install bower
 - bower install
 script: bundle exec middleman build
-before_deploy: cd build
-deploy:
-  provider: s3
-  bucket: "closure-jp"
-  skip_cleanup: true
-  secret_access_key:
-    secure: o3woNyvTnKWSLUYoHRN3APKEgpDPTrFqZoAcHQAbLPgNowIXEQ0xM2YjXJjzQZgFqwuXe0YT9jeB1qKl5kpr7YEvADpZ2/Nz+aYlzaIJjnf6MCJS5p1+rXmjpr1sQy9XTXLCkn96/Yz23UJDlonwqzQAGzJiALaIlSSHkVmFbaE=
-  access_key_id:
-    secure: hLKZUq0eIozb1QbMpQPSe6+yTFTGW+tYpDS1pANUX+DQtATd49Vk/FwaJ9LMJg/T8pMyIkda+tk0UGT78k8+8j+BYSMier8EORxiG2Z0NckQJNvU2cjXFV8tQJY8GEbIdr04s6rZXCAA0RFsac2nRBxnKgzxln/bxMgSc+PeALQ=
-  on:
-    branch: master
-    rvm: 2.0.0
+after_script: bundle exec middleman sync
+env:
+  global:
+  - secure: cktLUG+N/0re49SlUTbSI0mb6IdyaX5DZRSTtyJ7TtJt31dLeM9ioFrUgd5DHEau5q3uH0aOZPB/ef0gPYyaS8A4ndrD6nALTEizdcA9yM+VrKwN8n3FIzVQVtZFxUwsq9TBes/YtIsuQ6QkwQGNAoXIbP1pooHRmG91JPIz53E=
+  - secure: jKH8Rt/niz+Q0kQiI9ltjHHuUGx8z5AOJYrATNeC8xce5fFdKXiLDJBNTf+0F3gzZVmdu27/un5jq+RBBeXxLKBSSJVMZ/8YG4LT8kZKtKrIjj7x2dR3lEaSub990Uw+plvFluZxaMgkVIgGJMsbiTVdEG6goEmmtbnJ8MgNvRQ=
