--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_script:
 - npm install bower
 - bower install
 script: bundle exec middleman build
-after_script: bundle exec middleman sync
+after_script: bundle exec middleman s3_sync --force
 env:
   global:
   - secure: cktLUG+N/0re49SlUTbSI0mb6IdyaX5DZRSTtyJ7TtJt31dLeM9ioFrUgd5DHEau5q3uH0aOZPB/ef0gPYyaS8A4ndrD6nALTEizdcA9yM+VrKwN8n3FIzVQVtZFxUwsq9TBes/YtIsuQ6QkwQGNAoXIbP1pooHRmG91JPIz53E=
